fix mobile overflow

--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -6,6 +6,8 @@
   max-width: 800px;
   position: absolute;
   padding-right: 16px;
+  word-break: break-word;
+  word-wrap: break-word;
 }
 
 
